# breastfeed_django

./: .gitignore  .ignore  LICENSE  README.md  pyproject.toml
account_recovery/: apps.py  views.py
account_recovery/templates/: account_recovery.html
accounts/: forms.py  views.py
accounts/templates/: accounts.html
app/: settings.py  urls.py
app/templates/: base.html
app/templatetags/: ensure_overridden.py
breastfeed_django/: pyproject.toml
breastfeed_django/app/: settings.py
feed/: views.py
feed/templates/: feed.html
locale/pt_BR/LC_MESSAGES/: django.mo  django.po
login/: admin.py  forms.py  models.py  views.py
login/migrations/: 0001_initial.py  0002_type_user_delete_user.py  0002_type_user_user_user_type.py  0003_user_photo.py  0004_delete_user.py
login/templates/: account_recovery.html  accounts.html  login.html
media/system/: iconslink.txt
static/: base.css  login.css
static/css/: accounts.css  login.css
